fixed white-space issue on mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -51,7 +51,7 @@
   font-weight: bold;
   padding: 1rem;
   border-bottom: 5px solid black;
-  width: 105%;
+  width: 100%;
   .bird {
     height: 25px;
     width: auto;
