--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -157,15 +157,17 @@ footer {
     margin: 0 auto;
   }
   .frontLanding {
+  font-size: 1.6rem;
+    
     &--p1 {
       bottom: 16%;
       left: 15%;
       right: 0;
     }
     &--p2 {
-      bottom: 3%;
+      bottom: 4%;
       width: 90%;
-      left: 25%;
+      left: 15%;
       right: 0;
     }
   }
